# social_bot

./: .env.example  .gitignore  AUDIT_CODEBASE.md  AUDIT_WORKFLOW.md  CLAUDE.md  README.md  justfile  pyproject.toml  v1_plan.md
.claude/: settings.local.json
Documents/: Claude_Social_Overview.docx  Claude_Social_Technical.docx
config/: cron_clients.yaml
deploy/: cron_wrap.sh  crontab.txt
docker/: Dockerfile  docker-compose.yml
docs/: AUDIT_PROMPT.md  archive_architecture.md  archive_rollout_plan.md  audit_fixes_tracker.md  facebook-diy-scraper-brief.md  notion_memory_architecture.md  option_c_self_host_plan_2026-05-24.md  plan_drive_live_view.md  report_template_requirements.md  scraping_research_2026-05-24.md
migrations/: 0001_initial_schema.sql  0002_add_ai_description.sql  0003_add_stories_ai.sql  0004_synthesis_artifacts.sql  0005_drive_sync.sql  0006_archive_ledger.sql  0007_report_runs.sql  0008_health_snapshots.sql
research/: apify_actor_market_research.md  archive_rollout_plan.md  gdpr_compliance_report.md  tiktok_platform_expansion.md
scripts/: _backfill_reel_covers.py  _cleanup_stale_junk.py  _gen_docs.py  _google_auth.py  _migrate_hiker_dedup.py  _spike_cluster.py  _spike_gemini_synthesis.py  _spike_render_real.py  _spike_report_data.py  _spike_report_data_v2.py  _spike_report_render.py  _spike_synthesis_module.py  archive_and_purge.py  backfill_storage_paths.py  cleanup_drive_orphans.py  cleanup_storage_orphans.py  data_health.py  deploy_check.py  describe_posts.py  describe_stories.py  make_content_bundle.py  pilot_cookie_scraper.py  (+7 more)
(+130 files in other folders)
